--- a/static/stylesheets/sass/_global.sass
+++ b/static/stylesheets/sass/_global.sass
@@ -486,6 +486,7 @@ body > footer
   p
     float: left
     line-height: inherit
+    margin-bottom: 0
   small
     float: right
   a
